<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.myrog.eatthemall.VerifyPhoneActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@color/white"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/txt_back"
                android:text="@string/text_back"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_back"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/border_toolbar" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/text_input_six_letters"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"/>


    <com.example.myrog.eatthemall.Widget.PinEntryEditText
        android:id="@+id/txt_pin_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:inputType="number"
        android:maxLength="6"
        android:textIsSelectable="false"
        android:textSize="30sp"
        app:pinAnimationType="popIn"
        app:pinCharacterMask="*"
        app:pinLineStroke="2dp"
        app:pinLineStrokeSelected="4dp"
        app:pinBackgroundIsSquare="false"
        app:pinLineColors="@color/colorPrimary"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_resend"
        android:text="@string/text_resend_code"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
</LinearLayout>
