<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/view_center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <View
        android:id="@+id/view_center"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/layout_default_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="40dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/text_input_layout_style"
                android:layout_marginBottom="15dp">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_phone"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:theme="@style/edit_text_style" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <!--style="@style/FullScreenWidth.Button"-->
                <Button
                    android:id="@+id/btn_login"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/text_login" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/grey_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_or_login_with" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/grey_dark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_fb_login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="#3b5998"
                android:drawableLeft="@drawable/ic_facebook"
                android:maxWidth="500dp"
                android:text="FACEBOOK"
                android:textColor="@color/white" />

            <Button
                android:layout_marginLeft="20dp"
                android:id="@+id/btn_google_login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="#d23e2b"
                android:drawableLeft="@drawable/ic_google_plus"
                android:text="GOOGLE"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
